# video-stream-multiplexer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.MD  main.c
config/: streams.sample.json
include/: multi_stream.h  parse_config.h  single_stream.h
scripts/: generate_mock_json.py
src/: multi_stream.c  parse_config.c  single_stream.c
